--- a/src/Styles/Pages/bio.css
+++ b/src/Styles/Pages/bio.css
@@ -1,4 +1,4 @@
-#page-landing {
+#bio {
     padding: 2rem;
 	width: 100vw;
 	height: 100vh;
@@ -8,34 +8,34 @@
 	align-items: center;
 }
 
-#page-landing .content-wrapper {
+#bio .content-wrapper {
 	position: relative;
 	width: 100%;
 	max-width: 1100px;
 	height: 100%;
-	max-height: 680px;
+	max-height: 480px;
 	display: flex;
 	align-items: flex-start;
 	flex-direction: column;
 	justify-content: space-between;
-    background: url('../../assets/Logo.svg') no-repeat 80% center;
-    background-size: 500px;
+    background: url('../../assets/lari-avatar.jpg') no-repeat 80% center;
+    background-size: 400px;
 }
 
-#page-landing .content-wrapper main {
+#bio .content-wrapper main {
 	max-width: 350px;
 }
 
-#page-landing .content-wrapper main h1 {
-	font-size: 86px;
+#bio .content-wrapper main h1 {
+	font-size: 66px;
 	font-weight: 900;
     line-height: 78px;
     margin-top: 40px;
 }
 
-#page-landing .content-wrapper main p {
+#bio .content-wrapper main p {
 	margin-top: 40px;
-	font-size: 24px;
+	font-size: 18px;
 	line-height: 34px;
 }
 
@@ -82,6 +82,46 @@
 	
 
 }
+.content-wrapper .enter-app-redes{
+	padding-top: 150px;
+	margin-right: 60px;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	width: 80px;
+	height: 80px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+}
+ .content-wrapper   .enter-app-redes-g {
+	padding-top: 150px;
+	margin-right: 30px;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	width: 80px;
+	height: 80px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	
+ }
+
+ .content-wrapper .enter-app-redes-e{
+	padding-top: 150px;
+	margin-right: px;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	width: 80px;
+	height: 80px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+ }
 
 .content-wrapper .enter-app:hover, .enter-app-bio:hover{
 	background: #96feff;
