--- a/src/Styles/Pages/bio.css
+++ b/src/Styles/Pages/bio.css
@@ -27,7 +27,7 @@
 }
 
 #bio .content-wrapper main h1 {
-	font-size: 66px;
+	font-size: 50px;
 	font-weight: 900;
     line-height: 78px;
     margin-top: 40px;
@@ -120,6 +120,21 @@
 	justify-content: center;
 
  } 
+ aside .enter-home{
+	
+	position: initial;
+	right: 0;
+	bottom: 0;
+	width: 50px;
+	height: 50px;
+	background: #d00000;
+	border-radius: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: background-color 0.2s;
+
+ }
 
 .content-wrapper .enter-app:hover, .enter-app-bio:hover{
 	background: #e01e37;
