--- a/src/Styles/Pages/bio.css
+++ b/src/Styles/Pages/bio.css
@@ -13,12 +13,12 @@
 	width: 100%;
 	max-width: 1100px;
 	height: 100%;
-	max-height: 480px;
+	max-height: 450px;
 	display: flex;
 	align-items: flex-start;
 	flex-direction: column;
 	justify-content: space-between;
-    background: url('../../assets/lari-avatar.jpg') no-repeat 80% center;
+    background: url('../../assets/lari-avatar.jpg') no-repeat 70% center;
     background-size: 400px;
 }
 
@@ -80,46 +80,12 @@
 	justify-content: center;
 	transition: background-color 0.2s;
  }
-.content-wrapper .enter-app-redes{
-	padding-top: 150px;
-	margin-right: 60px;
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	width: 80px;
-	height: 80px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+.content-wrapper .enter-app-redes ,  .enter-app-redes-g,
+.enter-app-redes-e{
+	margin-right: 20px;
 
 }
- .content-wrapper   .enter-app-redes-g {
-	padding-top: 150px;
-	margin-right: 30px;
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	width: 80px;
-	height: 80px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	
- }
 
- .content-wrapper .enter-app-redes-e{
-	padding-top: 150px;
-	margin-right: px;
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	width: 80px;
-	height: 80px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-
- } 
  aside .enter-home{
 	
 	position: initial;
